--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
                     </div>
                 </div>
             </div>
+            <div id="pop-up" class="">
+                <div>
+                    <h3 id="message">Hello World</h3>
+                    <div>
+                        <button id="restart-2">Restart</button>
+                        <button id="quit-2">Quit</button>
+                    </div>
+                </div>
+            </div>
         </main>
         <script src="main.js"></script>
     </body>
