fix and add design

--- a/index.html
+++ b/index.html
@@ -28,16 +28,18 @@
                         />
                         <label for="multiplayer">Multiplayer</label>
                     </div>
-                    <input
-                        id="player-1-input"
-                        type="text"
-                        placeholder="Player 1 Name"
-                    />
-                    <input
-                        id="player-2-input"
-                        type="text"
-                        placeholder="Player 2 Name"
-                    />
+                    <div>
+                        <input
+                            id="player-1-input"
+                            type="text"
+                            placeholder="Player 1 Name"
+                        />
+                        <input
+                            id="player-2-input"
+                            type="text"
+                            placeholder="Player 2 Name"
+                        />
+                    </div>
                     <button id="start-game">Start Game</button>
                 </div>
             </div>
@@ -69,7 +71,7 @@
                 </div>
             </div>
             <div id="pop-up" class="">
-                <div>
+                <div class="support-scale">
                     <h3 id="message">Hello World</h3>
                     <div>
                         <button id="restart-2">Restart</button>
